--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
         "@diia-inhouse/utils": "^2.36.0",
         "eslint": "8.53.0",
         "nock": "13.3.1",
-        "type-fest": "4.3.1"
+        "type-fest": "^4.8.1",
+        "typescript": "5.3.3"
     },
     "release": {
         "extends": "@diia-inhouse/configs/dist/semantic-release/package",
