--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "declaration": true,
         "declarationDir": "dist/types",
         "baseUrl": ".",
-        "strict": true
+        "skipLibCheck": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "tests"]
