--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@diia-inhouse/diia-metrics",
-    "version": "3.11.0",
+    "version": "3.12.0",
     "description": "package to export prometheus metrics",
     "main": "dist/index.js",
     "types": "dist/types/index.d.ts",
@@ -31,23 +31,25 @@
         "@babel/traverse": "7.23.2"
     },
     "dependencies": {
-        "@diia-inhouse/errors": "1.9.0",
-        "@diia-inhouse/types": "6.24.0",
         "prom-client": "15.1.2"
     },
+    "peerDependencies": {
+        "@diia-inhouse/errors": ">=1.10.0",
+        "@diia-inhouse/types": ">=6.30.0"
+    },
     "devDependencies": {
-        "@diia-inhouse/configs": "1.31.1",
-        "@diia-inhouse/diia-logger": "2.15.0",
+        "@diia-inhouse/configs": "1.32.0",
+        "@diia-inhouse/diia-logger": "3.0.0",
         "@diia-inhouse/eslint-config": "5.1.0",
-        "@diia-inhouse/test": "6.3.0",
-        "@types/node": "20.12.7",
+        "@diia-inhouse/test": "6.3.1",
+        "@types/node": "20.14.5",
         "eslint": "8.57.0",
         "eslint-plugin-prettier": "5.1.3",
         "lockfile-lint": "4.13.2",
         "madge": "7.0.0",
         "nock": "13.5.4",
-        "prettier": "3.2.5",
-        "rimraf": "5.0.5",
+        "prettier": "3.3.2",
+        "rimraf": "5.0.7",
         "semantic-release": "21.1.2",
         "type-fest": "4.3.1",
         "typescript": "5.4.5"
@@ -83,6 +85,5 @@
     },
     "jest": {
         "preset": "@diia-inhouse/configs/dist/jest"
-    },
-    "peerDependencies": null
+    }
 }
